--- a/css/style.css
+++ b/css/style.css
@@ -3,305 +3,40 @@
 =================================
 =================================
 
-          Global CSS
+          Navbar Header
 
 =================================
 =================================
 
 */
 
-:root {
-  --primary-color: #c8d6e5;
-  --primary-alt-color: #8395a7;
-  --font-color: #6488ab;
-  --font-alt-color: #142d4b;
-  --hover-color: #48dbfb;
-  --hover-alt-color: #0abde3;
+#main-nav {
+    background-color: #c8d6e5;
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+#brand-img {
+    height: 40px;
 }
 
-body {
-  /* background-color: #f4f4f4; */
-  background-color: #f4f4f4;
-  color: #191919;
-  font-family: Arial, Helvetica, sans-serif;
-  line-height: 1.5em;
+@media screen and (max-width: 350px) {
+    #brand-img {
+        height: 30px;
+    }
 }
 
-.container {
-  width: 80%;
-  margin: 0 auto;
+@media screen and (max-width: 255px) {
+    #brand-img {
+        height: 20px;
+    }
 }
 
-/* 
-
-=================================
-=================================
-
-          Utility Classes
-
-=================================
-=================================
-
-*/
-
-.btn {
-  padding: 10px 20px;
-  background-color: var(--font-color);
-  color: #fff;
-  text-decoration: none;
-  border: none;
-  outline: none;
-  border-radius: 10px;
-  cursor: pointer;
-  transition: all 0.5s;
+#login-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.btn:hover {
-  background-color: var(--font-alt-color);
-  color: #fff;
-}
-
-/* 
-
-=================================
-=================================
-
-          Header CSS
-
-=================================
-=================================
-
-*/
-
-#main-header {
-  width: 100%;
-  background-color: var(--primary-color);
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  /* border-bottom: 4px solid var(--primary-alt-color); */
-}
-
-#main-header .container {
-  width: 90%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-/* Branding Image */
-
-#main-header #branding {
-  height: 50px;
-}
-
-/* Navigation */
-
-#main-nav > ul {
-  list-style: none;
-  display: flex;
-}
-
-#main-nav > ul > li {
-  position: relative;
-}
-
-#main-nav > ul > li:hover ul.sub-menu {
-  display: block;
-}
-
-#main-nav ul.sub-menu {
-  list-style: none;
-  margin-left: 1rem;
-  position: absolute;
-  top: 87px;
-  background-color: var(--primary-color);
-  border-top: 3px solid var(--primary-alt-color);
-  border-radius: 0 0 5px 5px;
-  min-width: 200px;
-  display: none;
-}
-
-#main-nav ul.sub-menu li {
-  border-bottom: 2px dotted var(--primary-alt-color);
-}
-
-#main-nav ul.sub-menu li:last-child {
-  border-bottom: none;
-}
-
-#main-nav a {
-  color: var(--font-alt-color);
-  display: inline-block;
-  font-size: 1rem;
-  text-decoration: none;
-  padding: 2rem 1rem;
-  transition: all 0.3s;
-}
-
-#main-nav a:hover {
-  color: #6488ab;
-}
-
-#main-nav a.active {
-  background: #b4c2d1;
-  color: #0f1c29;
-}
-
-#main-nav .sub-menu a {
-  padding: 6px 4px;
-  display: inline-block;
-  width: 100%;
-}
-
-#main-nav .sub-menu a:hover {
-  background-color: #b4c2d1;
-  color: #0f1c29;
-}
-
-#menu-toggle {
-  display: none;
-}
-
-@media screen and (max-width: 1300px) {
-  #main-header .container {
-    width: 95%;
-  }
-}
-
-@media screen and (max-width: 1100px) {
-  #main-header {
-    padding: 10px 0;
-  }
-  #main-nav {
-    display: none;
-  }
-
-  #menu-toggle {
-    display: block;
-  }
-
-  #login {
-    display: none;
-  }
-}
-
-/* 
-
-=================================
-=================================
-
-        Side Navigation
-
-=================================
-=================================
-
-*/
-
-#side-nav {
-  position: absolute;
-  top: 75px;
-  left: -500px;
-  width: 300px;
-  height: calc(100vh - 75px);
-  background-color: var(--primary-color);
-  overflow-y: auto;
-  transition: all 0.5s ease-in;
-}
-
-#side-nav.show {
-  left: 0;
-}
-
-#side-nav #login {
-  width: auto;
-  display: inline-block;
-  margin-left: 20px;
-  margin-top: 20px;
-}
-
-#side-nav #login:hover {
-  color: #fff;
-}
-
-#side-nav a {
-  color: #0f1c29;
-  text-decoration: none;
-  display: inline-block;
-  width: 100%;
-}
-
-#side-nav li {
-  width: 100%;
-  cursor: pointer;
-}
-
-#side-nav .sub-menu ul {
-  display: none;
-  padding-top: 10px;
-  margin: 0;
-  overflow: hidden;
-  transition: all 0.5s ease-in;
-}
-
-#side-nav .sub-menu ul.open {
-  display: block !important;
-}
-
-#side-nav .sub-menu li {
-  width: 100%;
-  padding: 10px 0 10px 20px;
-  border-bottom: 1px dotted var(--primary-alt-color);
-}
-
-#side-nav .sub-menu li:hover {
-  cursor: pointer;
-  background-color: #d9e7f6;
-}
-
-#side-nav .sub-menu li:last-child {
-  border-bottom: none;
-}
-
-#side-nav > ul > li {
-  display: block;
-  padding: 10px 10px;
-}
-
-#side-nav .active {
-  background-color: #d9e7f6;
-}
-
-#side-nav .sub-menu > a {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  cursor: default;
-}
-
-#side-nav a .fas {
-  width: 30px;
-}
-
-#side-nav .sub-menu a .fa-caret-down {
-  margin-left: auto;
-}
-
-@media screen and (max-width: 576px) {
-  #main-header #branding {
-    height: 30px;
-  }
-
-  #menu-toggle {
-    padding: 10px 20px;
-  }
-
-  #side-nav {
-    top: 56px;
-  }
+#login-btn i {
+    display: inline-block;
+    margin-right: 5px;
 }
