Icon width Fixed

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,23 @@
 =================================
 =================================
 
+          Global
+
+=================================
+=================================
+
+*/
+
+* i {
+    display: inline-block;
+    min-width: 20px;
+}
+
+/*
+
+=================================
+=================================
+
           Navbar Header
 
 =================================
@@ -12,6 +29,7 @@
 
 #main-nav {
     background-color: #c8d6e5;
+    border-bottom: 3px solid #8395a7;
 }
 
 #brand-img {
