Menu Page Link Added

--- a/css/style.css
+++ b/css/style.css
@@ -35,8 +35,8 @@ body {
 */
 
 #main-nav {
-  background-color: #c8d6e5;
-  border-bottom: 1px solid #8395a7;
+  background-color: #f3f3f3;
+  /* border-bottom: 1px solid #f4f4f4; */
 }
 
 #brand-img {
