Font Color and Button Changed from Blue to Black

--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,12 @@ body {
   min-width: 20px;
 }
 
+@media screen and (min-width: 1400px) {
+  .container {
+    width: 1100px;
+  }
+}
+
 /*
 
 =================================
@@ -528,13 +534,7 @@ body {
 #numbers {
   width: 100%;
   padding: 2rem;
-  background: rgb(2, 0, 36);
-  background: linear-gradient(
-    90deg,
-    rgba(2, 0, 36, 1) 0%,
-    rgba(52, 89, 230, 1) 35%,
-    rgba(0, 212, 255, 1) 100%
-  );
+  background: var(--bs-dark);
   color: #fff;
 }
 
