--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,85 @@ body {
 =================================
 =================================
 
+        Page Heading Section
+
+=================================
+=================================
+
+*/
+
+#page-heading {
+    padding: 3rem 0;
+}
+
+/* Study-Material.html */
+
+#page-heading[data-page='study-material'] .container {
+    background: url('../images/study-material-page-heading-bg.jpg') no-repeat
+        center center/cover;
+}
+
+/* Enrollment-Form.html */
+
+#page-heading[data-page='enrollment-form'] .container {
+    background: url('../images/enrollment-form-page-heading-bg.jpg') no-repeat
+        center center/cover;
+}
+
+#page-heading .container {
+    border-radius: 10px;
+    padding: 4rem 0;
+    position: relative;
+    overflow: hidden;
+}
+
+#page-heading .container::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    box-shadow: inset 2rem 2rem 3rem rgba(0, 0, 0, 0.5),
+        inset -2rem -2rem 3rem rgba(0, 0, 0, 0.5);
+}
+
+#page-heading h1 {
+    position: relative;
+    z-index: 1;
+    font-family: 'Playfair Display';
+    text-align: center;
+    color: #fff;
+    font-weight: 900;
+    font-size: 3rem;
+}
+
+@media screen and (max-width: 576px) {
+    #page-heading {
+        padding: 1rem;
+    }
+
+    #page-heading .container {
+        padding: 3rem 0;
+    }
+
+    #page-heading .container::after {
+        box-shadow: inset 1rem 1rem 2rem rgba(0, 0, 0, 0.5),
+            inset -1rem -1rem 2rem rgba(0, 0, 0, 0.5);
+    }
+
+    #page-heading h1 {
+        font-size: 2rem;
+    }
+}
+
+/*
+
+=================================
+=================================
+
           Index.html
           Showcase Section
 
@@ -706,69 +785,6 @@ body {
 =================================
 
         Study-materials.html
-        Page Heading Section
-
-=================================
-=================================
-
-*/
-
-#page-heading {
-    padding: 3rem 0;
-}
-
-#page-heading .container {
-    background: url('../images/study-material-page-heading-bg.jpg') no-repeat
-        center center/cover;
-    border-radius: 10px;
-    padding: 4rem 0;
-    position: relative;
-    overflow: hidden;
-}
-
-#page-heading .container::after {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    z-index: 0;
-    background-color: rgba(0, 0, 0, 0.5);
-    box-shadow: inset 2rem 2rem 3rem rgba(0, 0, 0, 0.5),
-        inset -2rem -2rem 3rem rgba(0, 0, 0, 0.5);
-}
-
-#page-heading h1 {
-    position: relative;
-    z-index: 1;
-    font-family: 'Playfair Display';
-    text-align: center;
-    color: #fff;
-    font-weight: 900;
-    font-size: 3rem;
-}
-
-@media screen and (max-width: 576px) {
-    #page-heading {
-        padding: 1rem;
-    }
-
-    #page-heading .container {
-        padding: 3rem 0;
-    }
-
-    #page-heading h1 {
-        font-size: 2rem;
-    }
-}
-
-/*
-
-=================================
-=================================
-
-        Study-materials.html
         Book Links Section
 
 =================================
@@ -1005,6 +1021,45 @@ body {
 @media screen and (max-width: 768px) {
     #book-list-2 .book-container {
         grid-template-columns: repeat(1, 1fr);
+    }
+}
+
+/*
+
+=================================
+=================================
+
+        Enrollment Form.html
+        #enrollment-form
+
+=================================
+=================================
+
+*/
+
+#enrollment-form {
+    width: 100%;
+    padding-bottom: 2rem;
+}
+
+#enrollment-form .container {
+    padding: 1rem;
+    box-sizing: border-box;
+    background-color: #f9f9f9;
+    border-radius: 10px;
+    box-shadow: 2px 2px 3px #ccc;
+}
+
+@media screen and (max-width: 576px) {
+    #enrollment-form .container {
+        box-shadow: none;
+        background-color: #fff;
+    }
+
+    #enrollment-form .form-check.form-check-inline {
+        display: block;
+        width: 100%;
+        margin-left: 1rem;
     }
 }
 
