--- a/css/style.css
+++ b/css/style.css
@@ -1136,6 +1136,44 @@ body {
     padding: 2rem 0;
 }
 
+#media .container {
+    padding: 1rem;
+    box-sizing: border-box;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 2rem;
+}
+
+#media img {
+    width: 100%;
+    height: 175px;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+@media screen and (max-width: 992px) {
+    #media .container {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media screen and (max-width: 768px) {
+    #media .container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (max-width: 576px) {
+    #media .container {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    #media img {
+        height: auto;
+        object-fit: contain;
+    }
+}
+
 /*
 
 =================================
