--- a/css/style.css
+++ b/css/style.css
@@ -1446,16 +1446,12 @@ body {
 */
 
 #news-detail {
-    padding: 2rem 0;
-}
-
-#news-detail .container {
-    padding: 1rem;
+    padding: 1rem 0;
 }
 
 #news-detail .news-title {
     font-family: 'Sainfair Display', serif;
-    font-weight: 500;
+    font-weight: bolder;
     font-size: 2rem;
 }
 
@@ -1493,6 +1489,95 @@ body {
 
     #news-detail .news-content img {
         width: 100%;
+    }
+}
+
+/*
+
+=================================
+=================================
+
+          news-read.html
+          #related-news
+
+=================================
+=================================
+
+*/
+
+#related-news {
+    width: 100%;
+    padding: 1rem 0;
+}
+
+#related-news h2 {
+    font-family: 'Sanfair Display', serif;
+    font-weight: bolder;
+    margin-bottom: 1rem;
+}
+
+#related-news .news-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 1rem;
+}
+
+#related-news .card {
+    overflow: hidden;
+    border-radius: 10px;
+}
+
+#related-news .card-img-top {
+    height: 200px;
+    object-fit: cover;
+}
+
+#related-news .card-body {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+#related-news .card-body a.btn {
+    margin-top: auto;
+}
+
+@media screen and (max-width: 992px) {
+    #related-news .news-container {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media screen and (max-width: 768px) {
+    #related-news .news-container {
+        grid-template-columns: 1fr;
+    }
+
+    #related-news .card {
+        display: flex;
+        flex-direction: row;
+    }
+
+    #related-news .card img {
+        width: 50%;
+        height: auto;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    #related-news .card {
+        flex-direction: column;
+    }
+
+    #related-news .card img {
+        width: 100%;
+        height: 200px;
+    }
+}
+
+@media screen and (max-width: 336px) {
+    #related-news .card img {
+        height: 150px;
     }
 }
 
